# Youtube-Data-API

./: README.md  README_POWERBI.md  pyproject.toml
powerBI/: yt_dashboard.pbix
powerBI/data/: yt_data_stats.csv
youtube_extractor/: streamlit_app.py  utils.py
youtube_extractor/output/: yt_stats_tech_phones.csv
